--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ footer {
 
 #projects {
     padding: 60px 20px;
-    background: linear-gradient(135deg, #667eea, #764ba2);
+    background: linear-gradient(to right, #141e30, #243b55);
     text-align: center;
     color: white;
 }
@@ -168,7 +168,7 @@ footer {
     padding: 60px 20px;
     text-align: center;
     background: #0f2027;
-    background: linear-gradient(to right, #2c5364, #203a43, #0f2027);
+    background: linear-gradient(to right, #141e30, #243b55);
     color: white;
 }
 
